<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/MainActivity2_TextView0"
        android:textColor="@color/white"
        android:textSize="@dimen/TamañoTexto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="156dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/MainActivity2_TextView1"
        android:textColor="@color/black"
        android:textSize="@dimen/TamañoTexto_normal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="156dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/MainActivity2_TextView2"
        android:textColor="@color/black"
        android:textSize="@dimen/TamañoTexto_normal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="156dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/MainActivity2_TextView3"
        android:textColor="@color/black"
        android:textSize="@dimen/TamañoTexto_normal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="156dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/MainActivity2_TextView4"
        android:textColor="@color/black"
        android:textSize="@dimen/TamañoTexto_normal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="156dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/MainActivity2_TextView5"
        android:textColor="@color/black"
        android:textSize="@dimen/TamañoTexto_normal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="346dp"
        android:layout_height="103dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="selecciono"
            android:text="@string/MainActivity2_RadioButton1"
            android:textSize="@dimen/TamañoTexto" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="selecciono"
            android:text="@string/MainActivity2_RadioButton2"
            android:textSize="@dimen/TamañoTexto" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/MainActivity2_TextViewEstandar"
        android:textSize="@dimen/TamañoTexto_pq"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/MainActivity2_TextViewEstandar"
        android:textSize="@dimen/TamañoTexto_pq"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/MainActivity2_TextViewEstandar"
        android:textSize="@dimen/TamañoTexto_pq"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/MainActivity2_TextViewEstandar"
        android:textSize="@dimen/TamañoTexto_pq"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/MainActivity2_TextViewEstandar"
        android:textSize="@dimen/TamañoTexto_pq"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

</androidx.constraintlayout.widget.ConstraintLayout>