<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Img_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/Img_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/balon" />

    <EditText
        android:id="@+id/edt_ingresa_numero"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="68dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/edt_numero_ingresado"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#03A9F4"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Img_view" />

    <Spinner
        android:id="@+id/spinner_zona"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        android:contentDescription="@string/Spinner_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_ingresa_numero" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="96dp"
        android:onClick="calcular"
        android:text="@string/btn_text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_zona"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>